--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 AILO/.DS_Store
 AILO_APP/.DS_Store
 AILO_APP/Assets.xcassets/.DS_Store
+AILO_APP/Assets.xcassets/.DS_Store
+AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInterfaceState.xcuserstate
