--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ AILO_APP/.DS_Store
 AILO_APP/Assets.xcassets/.DS_Store
 AILO_APP/Assets.xcassets/.DS_Store
 AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInterfaceState.xcuserstate
+AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInterfaceState.xcuserstate
