--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ AILO_APP/Assets.xcassets/.DS_Store
 AILO_APP/Assets.xcassets/.DS_Store
 AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInterfaceState.xcuserstate
 AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcuserstate
