--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInter
 *.xcuserstate
 *.xcuserstate
 *.xcuserstate
+*.xcuserstate
