--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInter
 *.xcuserstate
 *.xcuserstate
 *.xcuserstate
+/AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
