MailDetailView Mail Adresse Name
1. Funktion verschoben: Die parseFromAddress Funktion wurde aus der AttachmentRowView herausgenommen und in die MessageDetailView verschoben, wo sie tatsächlich verwendet wird.

2. Korrekte Platzierung: Die Funktion steht jetzt als private Methode der MessageDetailView, direkt nach den Action-Methoden.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInter
 *.xcuserstate
 *.xcuserstate
 /AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
+/AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
