--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInter
 *.xcuserstate
 /AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
 /AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
+/AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
