--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInter
 /AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
 /AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
 /AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
+/AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
