--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInter
 /AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
 /AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
 /AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
+/AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
+/AILO_APP.xcodeproj
