Step 1 for MailDetailView

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInter
 /AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
 /AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
 /AILO_APP.xcodeproj
+/AILO_APP.xcodeproj
+*.xcuserstate
