--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInter
 /AILO_APP.xcodeproj
 /AILO_APP.xcodeproj
 *.xcuserstate
+AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInterfaceState.xcuserstate
