--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInter
 AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInterfaceState.xcuserstate
 AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInterfaceState.xcuserstate
 /AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad
+AILO_APP.xcodeproj/project.xcworkspace/xcuserdata/shentsch.xcuserdatad/UserInterfaceState.xcuserstate
