--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@ playground.xcworkspace
 !*.xcodeproj/project.pbxproj
 !*.xcscheme
 build_info.txt
+Configuration/.DS_Store
+Database/.DS_Store
+Helpers/.DS_Store
+Views/.DS_Store
